in the windows version by using the menu

help/HTML help/packages/gamlss/directory/gamlss-manual.pdf

More information and papers about GAMLSS can be found in

http://www.gamlss.org/

Question or suggestions about GAMLSS can be send to

   d.stasinopoulos@londonmet.ac.uk
or
   r.rigby@londonmet.ac.uk
---------------------------------------------------------------------
Version 4.2-7

1. gamlss 
       i) gamlssML(): now allows fitting of binomial data (sorry never checked before) and the use of formula in the specification of the model (e.g, y~1)
       ii) .gamlss.multin.list is now on NAMESPACE
       iii) the functions vcov.gamlss() and summary.gamlss() have now an extra argument 
            hessian.fun with two altenatives "R" and "PB" in order to calculate the Hessian.
            The "R" option uses the R function optimHess() while the "PB" uses a local function 
            based an equivalent function of Pinheiro and Bates in nlme package.


Version 4.2-6

1. gamlss 
     i)  LR.test() a small amendment when checking whether it is  gamlss model
     ii) gen.likelihood()  a small amendment to make sure that it gets the correct link functions
     iii) the functions get.K() and rvcov() are introduced for robust (sandwich) standard errors
     iv)  A new argument "robust" is introduced for the methods
           a) vcov.gamlss()
           b) summary.gamlss()
           c) confint.gamlss()
      v) getSmo() is introduced for get information on smoothing terms
      vi) lms() a bug on the previous version is corrected and a additional feature is added with argument
          "trans.x".  With "tans.x=TRUE" the function looks for a transformation in the x-variable.
2. gamlss.add
      i)  fitFixBP() is named now fitFixKNots()
      ii) attach() data is taken out from fitFixKnots(), fitFreeKnots(), penLags().

---------------------------------------------------------------------
Version 4.2-4

1. gamlss:  